portfolio html und css

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     <li>
                     <h3>Projekt 1:</h3>
                     <p>Meine erste Webseite für "Hunters-World" die noch weiter nach und nach verbessert wird!</p>
-                    <img width="800" src="./Bilder/Bildschirmfoto vom ersten Projekt.png" alt="Webprojekt-Foto"><a href="https://soerenboettcher.github.io/web/index.html" target="_blank"></a>
+                    <img width="100%" src="./Bilder/Bildschirmfoto vom ersten Projekt.png" alt="Webprojekt-Foto"><a href="https://soerenboettcher.github.io/web/index.html" target="_blank"></a>
                     </li>
                     <li>
                     <h3>Projekt 2:</h3>
                     <p>User-Interface-Basic Testpage</p>
-                    <img width="800" src="./Bilder/Bildschirmfoto vom UIB-Test.png" alt="Webprojekt-Foto"><a href="file:///home/dci-student/Class-Github/Github-Test/ui-basics-adv-test-SoerenBoettcher/index.html" target="_blank"></a>
+                    <img width="100%" src="./Bilder/Bildschirmfoto vom UIB-Test.png" alt="Webprojekt-Foto"><a href="file:///home/dci-student/Class-Github/Github-Test/ui-basics-adv-test-SoerenBoettcher/index.html" target="_blank"></a>
                     </li>
                 </ul>
         </section>
