portfolio html und css

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <h2>Kontakt</h2>
         <p>Du kannst mich über <a href="mailto:so.boettcher@yahoo.com">so.boettcher@yahoo.com</a> erreichen.</p>
         <p>Telefon: 01575 / 5560201</p>
+        <a href="https://github.com/SoerenBoettcher"><i class="fa-brands fa-square-github"></i></a>
     </footer>
 </body>
 </html>
