portfolio html und css

--- a/index.html
+++ b/index.html
@@ -58,14 +58,25 @@
 
         <section class="skill">
             <h2>Fähigkeiten</h2>
-            <ul>
-                <li><i class="fa-brands fa-html5">&nbsp;</i>HTML5</li>
-                <div class="html"></div>
-                <li><i class="fa-brands fa-css3">&nbsp;</i>CSS3</li>
-                <div class="css"></div>
-                <li><i class="fa-brands fa-js">&nbsp;</i>Java-Script</li>
-                <div class="java"></div>
-            </ul>
+            <div class="radio-inputs">
+                <label class="radio">
+                  <input type="radio" name="radio" checked="">
+                  <i class="name fa-brands fa-html5">&nbsp;HTML5</i>
+                  <div class="html"></div>
+                </label>
+
+                <label class="radio">
+                  <input type="radio" name="radio">
+                  <i class="name fa-brands fa-css3">&nbsp;CSS3</i>
+                  <div class="css"></div>
+                </label>
+                    
+                <label class="radio">
+                  <input type="radio" name="radio">
+                  <i class="name fa-brands fa-js">&nbsp;Java-Script</i>
+                  <div class="java"></div>
+                </label>
+            </div>
         </section>
     </main>
     <footer>
