--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         erreichen.
       </p>
       <p>Telefon: 01575 / 5560201</p>
-      <a href="https://github.com/SoerenBoettcher"
+      <a href="https://github.com/SoerenBoettcher" target="_blank"
         ><i class="fa-brands fa-square-github"></i
       ></a>
     </footer>
