--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
           </li>
           <li>
             <h3>Projekt 2:</h3>
-            <p>User-Interface-Basic Testpage</p>
+            <p>Singel-Project Java-Script</p>
             <img
               width="100%"
-              src="./Bilder/Bildschirmfoto vom UIB-Test.png"
-              alt="Webprojekt-Foto"
+              src="./Bilder/Bildschirmfoto Singel-Project in Java-Script.png"
+              alt="Java-Script-Foto"
             /><a
-              href="file:///home/dci-student/Class-Github/Github-Test/ui-basics-adv-test-SoerenBoettcher/index.html"
+              href="https://github.com/SoerenBoettcher/singel-Projekt"
               target="_blank"
             ></a>
           </li>
